<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/facullty_no_text_view"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:text="@string/faculty_no_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/faculty_last_name_text_view"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/faculty_last_name_text_view"
        app:layout_constraintEnd_toEndOf="@+id/facullty_no_text_view"
        app:layout_constraintStart_toStartOf="@+id/facullty_no_text_view"
        app:layout_constraintTop_toBottomOf="@+id/facullty_no_text_view" />

    <TextView
        android:id="@+id/faculty_first_name_text_view"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/faculty_first_name_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_last_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_last_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_last_name_text_view" />

    <TextView
        android:id="@+id/faculty_salary_text_view"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/faculty_salary_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_first_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_first_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_first_name_text_view" />

    <TextView
        android:id="@+id/faculty_rate_bonus_text_view"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/faculty_rate_bonus_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_salary_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_salary_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_salary_text_view" />

    <TextView
        android:id="@+id/faculty_amount_bonus_text_view"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/faculty_amount_bonus_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_rate_bonus_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_rate_bonus_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_rate_bonus_text_view" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="400dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_faculty_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/prev_faculty_button" />

            <Button
                android:id="@+id/next_faculty_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/next_faculty_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

        <Button
            android:id="@+id/faculty_details_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/faculty_details_button" />

        <Button
            android:id="@+id/all_faculties_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_faculties_button" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>